# Optional26

./: CITATION.cff  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: debug-ci.md
examples/: CMakeLists.txt  README.md  concept_checks.cpp  optional_ref.cpp  pythagorean_triples.cpp  range_loop.cpp  sample.cpp  std_vs_beman.cpp
include/Beman/Optional26/: optional.hpp
include/beman/optional/: CMakeLists.txt  optional.hpp
include/beman/optional/detail/: iterator.hpp
include/beman/optional/detail/stl_interfaces/: config.hpp  fwd.hpp  iterator_interface.hpp
include/beman/optional26/: optional.hpp
include/beman/optional26/detail/: iterator.hpp
papers/P2988/: base-optional.tex  mybiblio.bib  new-optional.tex  optional_ref_wording.tex
src/Beman/Optional26/tests/: optional_ref.t.cpp
src/beman/optional/tests/: CMakeLists.txt  optional.t.cpp  optional_constexpr.t.cpp  optional_monadic.t.cpp  optional_range_support.t.cpp  optional_ref.t.cpp  optional_ref_monadic.t.cpp  test_types.hpp  test_utilities.hpp
src/beman/optional/tests/detail/: iterator.t.cpp
src/beman/optional26/: CMakeLists.txt  optional.cpp
src/beman/optional26/detail/: iterator.cpp
src/beman/optional26/tests/: CMakeLists.txt  optional.t.cpp  optional_constexpr.t.cpp  optional_monadic.t.cpp  optional_range_support.t.cpp  optional_ref.t.cpp  optional_ref_monadic.t.cpp  test_types.cpp  test_types.hpp  test_utilities.cpp
